# polyval2d-high-precision

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  setup.py
.github/workflows/: build_wheels_linux.yml  build_wheels_macos_arm64.yml  build_wheels_macos_x86_64.yml
polyval2d_mp/: __init__.py
src/: binding.cpp  polyval2d.hpp  test.cpp
